--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^1.7.9",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.5",
+    "fs": "0.0.1-security",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "15.1.6",
