--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "18.2.7",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.5",
     "fs": "0.0.1-security",
@@ -56,7 +57,8 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
